@@ -1,26 +1,24 @@
 package com.Vcidex.StoryboardSystems.Utils.API;
 
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
 import org.json.JSONObject;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
-
+import java.net.URI;
 public class ExternalAPIService {
-    private static final Logger logger = LogManager.getLogger(ExternalAPIService.class);
-    private static final String API_ENDPOINT = "https://api.example.com/productType"; // ✅ Replace with actual API URL
+    private static final String API_ENDPOINT = "https://api.example.com/productType";
 
     public static String fetchProductTypeFromAPI(String poId) {
         try {
-            URL url = new URL(API_ENDPOINT + "?poId=" + poId);
+            URI uri = new URI(API_ENDPOINT + "?poId=" + poId);
+            URL url = uri.toURL(); // ✅ Convert URI to URL
+
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("GET");
             conn.setRequestProperty("Accept", "application/json");
 
             if (conn.getResponseCode() != 200) {
-                logger.error("❌ API call failed: HTTP error code " + conn.getResponseCode());
                 return "{\"productType\": \"UNKNOWN\"}";
             }
 
@@ -35,7 +33,6 @@ public class ExternalAPIService {
             JSONObject jsonResponse = new JSONObject(response.toString());
             return jsonResponse.optString("productType", "UNKNOWN");
         } catch (Exception e) {
-            logger.error("❌ Error calling external API: " + e.getMessage());
             return "{\"productType\": \"UNKNOWN\"}";
         }
     }
